--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,3 +3,9 @@ version: 2
 
 sphinx:
   configuration: docs/source/conf.py
+
+python:
+  version: "3.10"
+  install:
+    - requirements: docs/requirements.txt
+    - requirements: requirements.txt
